fix: card width on small screens

--- a/social-links-profile-main/style.css
+++ b/social-links-profile-main/style.css
@@ -93,7 +93,7 @@ ul{
 
 
 @media screen and (max-width: 400px) {
-    main{
+    .card{
         width: 80%;
     }
     .about p{
